Added a better display of game results

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 </head>
 <body>
 
-
-
+<p id="playerInput"></p>
+<p id="randomRoll"></p>
 <p id="gameResult"></p>
-
+<button id="button">Play Another Game!</button>
 
 </body>
 </html>
