Button message message change

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <p id="playerInput"></p>
 <p id="randomRoll"></p>
 <p id="gameResult"></p>
-<button id="button">Play Another Game!</button>
+<button id="button">Play A Game!</button>
 
 </body>
 </html>
