refactored to add images to click as user input

--- a/index.html
+++ b/index.html
@@ -9,11 +9,18 @@
     <title>Rock Paper Scissors Game</title>
 </head>
 <body>
+<p id="pick">Pick your weapon!</p>
+
+<div id="imgContainer">
+    <img id="rockImg" src="img/rock.png" onclick="setRockWeapon()">
+    <img id="paperImg" src="img/paper.png" onclick="setPaperWeapon()">
+    <img id="scissorsImg" src="img/scissors.png" onclick="setScissorsWeapon()">
+</div>
+
 
 <p id="playerInput"></p>
 <p id="randomRoll"></p>
 <p id="gameResult"></p>
-<button id="button">Play A Game!</button>
 
 </body>
 </html>
