Added a score tracker

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Rock Paper Scissors Game</title>
 </head>
 <body>
-<p id="pick">Pick your weapon!</p>
+<p id="pick" class="middle">Pick your weapon!</p>
 
 <div id="imgContainer">
     <img id="rockImg" src="img/rock.png" onclick="setRockWeapon()">
@@ -18,9 +18,10 @@
 </div>
 
 
-<p id="playerInput"></p>
-<p id="randomRoll"></p>
-<p id="gameResult"></p>
+<p id="playerInput" class="middle"></p>
+<p id="randomRoll" class="middle"></p>
+<p id="gameResult" class="middle"></p>
+<p id="scoreDisplay" class="middle"></p>
 
 </body>
 </html>
