replaced onclicks on html for event listeners in javascript

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 <p id="pick" class="middle">Pick your weapon!</p>
 
 <div id="imgContainer">
-    <img id="rockImg" src="img/rock.png" onclick="setRockWeapon()">
-    <img id="paperImg" src="img/paper.png" onclick="setPaperWeapon()">
-    <img id="scissorsImg" src="img/scissors.png" onclick="setScissorsWeapon()">
+    <img id="rockImg" src="img/rock.png">
+    <img id="paperImg" src="img/paper.png">
+    <img id="scissorsImg" src="img/scissors.png">
 </div>
 
 
