refactoring, merged the 3 eventlistneners

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Rock Paper Scissors Game</title>
 </head>
 <body>
-<p id="pick" class="middle">Pick your weapon!</p>
+<p id="pick" class="middle">Pick your weapon! <br><br>First to 5 wins the set!</p>
 
 <div id="imgContainer">
     <img id="rockImg" src="img/rock.png">
@@ -17,11 +17,15 @@
     <img id="scissorsImg" src="img/scissors.png">
 </div>
 
+<p id="currentWeaponChoice" class="middle"></p>
 
-<p id="playerInput" class="middle"></p>
-<p id="randomRoll" class="middle"></p>
-<p id="gameResult" class="middle"></p>
+<p id="aiRoll" class="middle"></p>
+
+<p id="matchOutcome" class="middle"></p>
+
 <p id="scoreDisplay" class="middle"></p>
+
+<p id="gameOutcome" class="middle"></p>
 
 </body>
 </html>
