Added a variable to count x amount of match to win

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Rock Paper Scissors Game</title>
 </head>
 <body>
-<p id="pick" class="middle">Pick your weapon! <br><br>First to 5 wins the set!</p>
+<p id="pick" class="middle">
 
 <div id="imgContainer">
     <img id="rockImg" src="img/rock.png">
